# wex_scatter

./: .dockerignore  .git-blame-ignore-revs  .gitignore  CLAUDE.md  CODEOWNERS  DEVLOG.md  Dockerfile  GalaxyWorks.sln  LICENSE  README.md  TESTING_GUIDE.md  app_to_directory_mapping.json  backwards_compatibility_analysis.md  benchmark_analysis.py  benchmark_framework.py  benchmark_phase21_content_analysis.py  benchmark_phase22_23.py  conftest.py  dump_index.py  multiprocess_phase1.patch  multiprocessing plan  multiprocessing_design.txt  notes.md  optimized_file_discovery.py  output.csv  parse_pipeline_artifacts.py  phase2_architecture_analysis.md  pipeline_to_app_mapping.csv  profile_find_consumers.py  pyproject.toml  regression_test_summary.py  requirements.txt  scatter.py  tasks.txt  test_cli_dispatch.py  test_cli_modes.py  test_cli_parser.py  test_codebase_index.py  test_config.py  test_consumer_analyzer_graph.py  (+27 more)
GalaxyWorks.Api/: GalaxyWorks.Api.csproj  GlobalUsings.cs  Program.cs
GalaxyWorks.Data/: GalaxyWorks.Data.csproj
GalaxyWorks.Data.Tests/: InternalTypeTests.cs
GalaxyWorks.DevTools/: GalaxyWorks.DevTools.csproj  Program.cs
MyDotNetApp/: MyDotNetApp.csproj
MyDotNetApp.Consumer/: Progam.cs
MyDotNetApp2.Exclude/: Progam.cs
MyGalaxyConsumerApp/: OrderConsumer.cs  Project.cs
MyGalaxyConsumerApp2/: Project.cs
benchmark_results/: phase1_file_discovery_comparisons_20251026_185019.csv  phase1_file_discovery_comparisons_20251026_190449.csv  phase1_file_discovery_results_20251026_185019.json  phase1_file_discovery_results_20251026_190449.json  phase21_content_analysis_benchmark_20251026_195130.csv  phase21_content_analysis_benchmark_20251026_195247.csv  phase21_content_analysis_benchmark_20251026_195639.csv  phase21_content_analysis_summary_20251026_195247.json  phase21_content_analysis_summary_20251026_195639.json  phase22_23_benchmark_20260304_143337.json
docs/: ADR.md  ADR_DEV_LOG.md  ADR_GRAPH_PERFORMANCE.md  ADR_INDEX.md  ADR_TRANSPARENT_GRAPH.md  AI_SYMBOL_EXTRACTION_EVALUATION.md  APP_CONFIG_REPO.md  APP_CONFIG_REPO_SPIKE.md  CI_PIPELINE_PLAN.md  CLAUDE_INTEGRATION_EVALUATION.md  CLAUDE_SKILLS.md  FUTURE_RESEARCH.md  GAP_ANALYSYS.md  GRAPH_ONLY_AFFECTED_PLAN.md  GRAPH_TRANSITIVE_PLAN.md  HYBRID_AST_SPIKE_PLAN.md  INCREMENTAL_GRAPH_BRAINSTORM.md  INCREMENTAL_GRAPH_PLAN.md  INITIATIVE_3_PHASE5_PLAN.md  INITIATIVE_3_PLAN.md  INITIATIVE_5_PHASE5_PLAN.md  INITIATIVE_5_PHASE6_PLAN.md  INITIATIVE_5_PLAN.md  INITIATIVE_6_PHASE3_PLAN.md  INITIATIVE_9_PHASE1_PLAN.md  INITIATIVE_9_PHASE2_PLAN.md  INITIATIVE_9_PHASE4_PLAN.md  LEADERSHIP_DESIGN_REVIEW.md  METHOD_LEVEL_ANALYSIS_PLAN.md  MONOLITH_RUNBOOK.md  MYPY_BASELINE_PLAN.md  OUTPUT_REPORT_EVALUATION.md  PERSONAS.md  PIPELINE_CSV_IMPLEMENTATION.md  PIPELINE_REGISTRY_DESIGN.md  PRODUCT_DEFINITION.md  (+26 more)
(+419 files in other folders)
