[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "scatter"
version = "2.1.0"  # keep in sync with scatter/__version__.py
description = ".NET dependency graph engine — trace blast radius before you ship"
requires-python = ">=3.10"
dependencies = [
    "gitpython>=3.1,<4",
    "google-generativeai>=0.8,<1",
    "pyyaml>=6,<7",
]

[project.optional-dependencies]
pipeline-tools = ["pandas>=1.5,<3"]
ast = ["tree-sitter>=0.23,<1", "tree-sitter-c-sharp>=0.23,<1"]

[project.scripts]
scatter = "scatter.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["scatter"]

[dependency-groups]
dev = [
    "pytest>=9,<10",
    "pytest-cov>=7,<8",
    "ruff",
    "mypy",
    "types-pyyaml",
    "mkdocs-bootswatch>=1.1",
    "tree-sitter>=0.23,<1",
    "tree-sitter-c-sharp>=0.23,<1",
]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W"]
ignore = [
    "E501",  # line too long — ruff format handles code structure; long strings are fine
    "E741",  # ambiguous variable name (l, O, I) — font problem, not code problem
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # re-exports are intentional barrel imports

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
addopts = "-q"
markers = [
    "integration: tests that hit the filesystem or run multi-module pipelines",
]

[tool.coverage.run]
source = ["scatter"]

[tool.coverage.report]
show_missing = true
skip_empty = true
fail_under = 70
